package com.walkmate.domain.intent;

public enum WalkPurpose {
    EXERCISE,
    RELAX,
    PET,
    SIGHTSEEING,
    CHAT,
    OTHER
}
