package com.walkmate.domain.session;

public enum SessionStatus {
    PENDING,
    ACTIVE,
    COMPLETED,
    NO_SHOW,
    CANCELLED
}
