@startuml
skinparam classAttributeIconSize 0
hide methods
hide stereotypes

title Walking App - Scheduled Discovery (Intent–Intent Matching, DDD)

' =====================================================
' IDENTITY & ACCESS CONTEXT
' =====================================================

package "Identity & Access" {

  class UserAccount {
    +user_id : UUID
    --
    email : String
    phone : String
    password_hash : String
    provider : AuthProvider
    status : AccountStatus
    created_at : DateTime
    last_login_at : DateTime
  }

  enum AuthProvider {
    GOOGLE
    LOCAL
    PHONE
  }

  enum AccountStatus {
    ACTIVE
    SUSPENDED
    DELETED
  }
}

' =====================================================
' USER PROFILE CONTEXT
' =====================================================

package "User Profile" {

  class UserProfile {
    +user_id : UUID
    --
    full_name : String
    gender : Gender
    date_of_birth : Date
    avatar_url : String
    bio : String
    public_mode : Boolean
    created_at : DateTime
  }

  class ProfileTag {
    +tag_id : UUID
    --
    user_id : UUID
    tag_type : TagType
    created_at : DateTime
  }

  enum Gender {
    MALE
    FEMALE
    OTHER
  }

  enum TagType {
    HAS_PET
    QUIET
    MUSIC
    EXERCISE
    RELAX
  }

  UserProfile "1" -- "0..*" ProfileTag
}

UserAccount "1" -- "1" UserProfile

' =====================================================
' SOCIAL GRAPH CONTEXT
' =====================================================

package "Social Graph" {

  class FollowRelation {
    +follow_id : UUID
    --
    follower_id : UUID
    followee_id : UUID
    created_at : DateTime
  }

  class BlockRelation {
    +block_id : UUID
    --
    blocker_id : UUID
    blocked_id : UUID
    created_at : DateTime
  }

}

UserAccount "1" -- "0..*" FollowRelation
UserAccount "1" -- "0..*" BlockRelation

' =====================================================
' PRESENCE CONTEXT
' =====================================================

package "Presence" {
  
  class UserPresence {
    +user_id : UUID
    --
    status : PresenceStatus
    availability : PresenceAvailability
    quick_mode : Boolean
    last_active_at : DateTime
    expires_at : DateTime
  }
  
  enum PresenceStatus {
    ONLINE
    OFFLINE
  }
  
  enum PresenceAvailability {
    AVAILABLE
    UNAVAILABLE
  }
}

UserAccount "1" -- "1" UserPresence

' =====================================================
' WALK COORDINATION CONTEXT
' (Intent–Intent Matching)
' =====================================================

package "Walk Coordination" {

  class WalkIntent {
    +intent_id : UUID
    --
    user_id : UUID
    location_lat : Double
    location_lng : Double
    time_window_start : DateTime
    time_window_end : DateTime
    purpose : WalkPurpose
    matching_constraints : JSON
    status : IntentStatus
    created_at : DateTime
    expires_at : DateTime
  }

  enum IntentStatus {
    OPEN
    EXPIRED
    CANCELLED
    CONSUMED
  }

  enum WalkPurpose {
    EXERCISE
    RELAX
    PET
    SIGHTSEEING
  }

  class MatchProposal {
    +proposal_id : UUID
    --
    intent_id_A : UUID
    intent_id_B : UUID
    proposed_time_start : DateTime
    proposed_time_end : DateTime
    proposed_location_lat : Double
    proposed_location_lng : Double
    status : ProposalStatus
    created_at : DateTime
    expires_at : DateTime
  }

  enum ProposalStatus {
    PENDING
    ACCEPTED_BY_A
    ACCEPTED_BY_B
    CONFIRMED
    REJECTED
    EXPIRED
  }
}

UserAccount "1" -- "0..*" WalkIntent
WalkIntent "1" -- "0..*" MatchProposal : source

' =====================================================
' WALK LIFECYCLE CONTEXT
' =====================================================

package "Walk Lifecycle" {

  class WalkSession {
    +session_id : UUID
    --
    user1_id : UUID
    user2_id : UUID
    scheduled_start_time : DateTime
    scheduled_end_time : DateTime
    actual_start_time : DateTime
    actual_end_time : DateTime
    status : SessionStatus
    created_at : DateTime
    source_intent_id_A : UUID
    source_intent_id_B : UUID
  }

  enum SessionStatus {
    PENDING
    ACTIVE
    COMPLETED
    NO_SHOW
    CANCELLED
  }
}

UserAccount "1" -- "0..*" WalkSession

' =====================================================
' COMMUNICATION CONTEXT
' =====================================================

package "Communication" {

  class ChatRoom {
    +chat_room_id : UUID
    --
    session_id : UUID
    status : ChatStatus
    open_at : DateTime
    close_at : DateTime
  }

  enum ChatStatus {
    OPEN
    CLOSED
  }

  class ChatMessage {
    +message_id : UUID
    --
    chat_room_id : UUID
    sender_id : UUID
    content : String
    created_at : DateTime
  }

  WalkSession "1" -- "1" ChatRoom
  ChatRoom "1" -- "0..*" ChatMessage
}


' =====================================================
' TRUST & REPUTATION CONTEXT
' =====================================================

package "Trust & Reputation" {

  class WalkReview {
    +review_id : UUID
    --
    session_id : UUID
    reviewer_id : UUID
    reviewee_id : UUID
    rating_stars : Integer
    tags : JSON
    created_at : DateTime
  }

  class TrustScore {
    +user_id : UUID
    --
    score : Integer
    last_updated : DateTime
  }
  
  WalkSession "1" -- "0..*" WalkReview
  UserAccount "1" -- "1" TrustScore
}

' =====================================================
' REPORTING & DISPUTE CONTEXT
' =====================================================

package "Reporting & Dispute" {

  class SessionReport {
    +report_id : UUID
    --
    session_id : UUID
    reporter_id : UUID
    reported_user_id : UUID
    reason : String
    evidence_url : String
    status : ReportStatus
    created_at : DateTime
  }
  
  class DisputeCase {
    +dispute_id : UUID
    --
    session_id : UUID
    opened_by : UUID
    status : DisputeStatus
    resolution_action : String
    created_at : DateTime
    expires_at : DateTime
  }

  enum ReportStatus {
    OPEN
    RESOLVED
    REJECTED
  }
  
  enum DisputeStatus {
    OPEN
    RESOLVED
    CLOSED
  }
}

WalkSession "1" -- "0..*" SessionReport
WalkSession "1" -- "0..*" DisputeCase

' =====================================================
' GAMIFICATION CONTEXT
' =====================================================

package "Gamification" {

  class Badge {
    +badge_id : UUID
    --
    name : String
    condition_type : String
    condition_value : Integer
  }

  class UserBadge {
    +user_id : UUID
    --
    badge_id : UUID
    earned_at : DateTime
  }
  UserAccount "1" -- "0..*" UserBadge
  Badge "1" -- "0..*" UserBadge
}

' =====================================================
' NOTIFICATION CONTEXT
' =====================================================
package "Notification" {
  
  class Notification {
    +notification_id : UUID
    --
    user_id : UUID
    type : String
    payload : JSON
    status : NotificationStatus
    created_at : DateTime
  }
  
  enum NotificationStatus {
    PENDING
    SENT
    FAILED
  }
}
UserAccount "1" -- "0..*" Notification

' =====================================================
' AI PERSONALIZATION CONTEXT
' =====================================================

package "AI Personalization" {

  class UserEmbedding {
    +user_id : UUID
    --
    vector_data : Vector
    last_updated : DateTime
  }

  class MatchingPreferenceModel {
    +user_id : UUID
    --
    weight_time_overlap : Double
    weight_distance : Double
    weight_interest : Double
    weight_behavior : Double
  }
}

UserAccount "1" -- "1" UserEmbedding
UserAccount "1" -- "1" MatchingPreferenceModel

@enduml